<resources>
    <string name="app_name">Corona Tracker</string>
    <string name="confirmed">Confirmed</string>
    <string name="death">Death</string>
    <string name="recovered">Recovered</string>
    <string name="stat_heading">World Statistics</string>
    <string name="search_country">Search Country</string>
    <string name="dev">Paras Sidhu\n Android Engineer</string>
    <string name="ux">Pratik Kohli\n UX Designer</string>
    <string name="list_heading">Countries Affected</string>
    <string name="network_error_message">Please check your internet connection and try again!</string>
    <string name="disclaimer">This is not an official app and the data may vary depending upon the API. For exact numbers, you should rely on a government source.</string>
    <string name="new_cases">New Cases</string>
    <string name="sort">Sort</string>
    <string name="tab_1">Overview</string>
    <string name="tab_2">India</string>
    <string name="today_s_india_statistics">Today’s India Statistics</string>
    <string name="indian_states">Indian States</string>
    <string name="india_stats">India Stats</string>
    <string name="thanks_message">Thanks to the guys at covid19india.org for providing state-wise data and I\'m also thankful to all the volunteers who are trying to keep the data as accurate as possible.</string>
    <string name="thanks_title">Special Thanks</string>
</resources>
