<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="5dp"
    app:cardBackgroundColor="@color/dark_blue"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/countryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="CHINA" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/countryName"
            app:layout_constraintStart_toEndOf="@+id/countryName"
            app:layout_constraintTop_toTopOf="@+id/countryName"
            app:srcCompat="@drawable/ic_dot_blue" />

        <TextView
            android:id="@+id/newCasesCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/yellow"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/countryName"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/countryName"
            tools:text="41" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/new_cases"
            android:textColor="@color/light_grey"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/newCasesCount"
            app:layout_constraintStart_toEndOf="@+id/newCasesCount"
            app:layout_constraintTop_toTopOf="@+id/newCasesCount"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/confirmedCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/helvetica"
            android:textColor="@color/yellow"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/countryName"
            tools:text="81,008" />

        <TextView
            android:id="@+id/textView4"
            style="@style/HeadingTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/confirmed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmedCount" />

        <TextView
            android:id="@+id/deathCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/helvetica"
            android:textColor="@color/red"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/countryName"
            tools:text="81,008" />

        <TextView
            android:id="@+id/textView5"
            style="@style/HeadingTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:text="@string/death"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deathCount" />

        <TextView
            android:id="@+id/recoveredCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/helvetica"
            android:textColor="@color/green"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/countryName"
            tools:text="81,008" />

        <TextView
            android:id="@+id/textView6"
            style="@style/HeadingTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/recovered"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/recoveredCount" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>