<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_gradient"
    tools:context="com.parassidhu.coronavirusapp.ui.india.IndiaFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_color">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:contentInsetStart="0dp"
        app:contentInsetEnd="0dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/montserrat_medium"
                android:layout_gravity="start|center_vertical"
                android:text="@string/india_stats"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/helpImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:layout_marginEnd="10dp"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/ic_help"
                android:focusable="true" />

        </FrameLayout>
    </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:elevation="0dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:id="@+id/view"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="10dp"
                        android:background="#1D2940"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/today_s_india_statistics"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal"
                        android:weightSum="3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textView">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="0dp"
                            android:layout_height="80dp"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/bg_confirmed">

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="10dp"
                                android:fontFamily="@font/montserrat_bold"
                                android:text="@string/confirmed"
                                android:textColor="#7D6B00"
                                android:textSize="16sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/confirmedCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:ellipsize="end"
                                android:fontFamily="@font/helvetica"
                                android:maxLines="1"
                                android:textColor="@color/white"
                                android:textSize="22sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toStartOf="@+id/textView7"
                                tools:text="1000000" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="0dp"
                            android:layout_height="80dp"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/bg_recovered">

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="10dp"
                                android:fontFamily="@font/montserrat_bold"
                                android:text="@string/recovered"
                                android:textColor="#0A7555"
                                android:textSize="16sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/recoveredCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:ellipsize="end"
                                android:fontFamily="@font/helvetica"
                                android:maxLines="1"
                                android:textColor="@color/white"
                                android:textSize="22sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toStartOf="@+id/textView8"
                                tools:text="1000000" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="0dp"
                            android:layout_height="80dp"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/bg_death">

                            <TextView
                                android:id="@+id/textView9"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="10dp"
                                android:fontFamily="@font/montserrat_bold"
                                android:text="@string/death"
                                android:textColor="#830404"
                                android:textSize="16sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/deathCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:ellipsize="end"
                                android:fontFamily="@font/helvetica"
                                android:maxLines="1"
                                android:textColor="@color/white"
                                android:textSize="22sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toStartOf="@+id/textView9"
                                tools:text="1000000" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/indian_states"
                        android:textColor="@color/white"
                        android:fontFamily="@font/montserrat_bold"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/stateRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="15dp"
            android:clipToPadding="false"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerLoading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <include layout="@layout/shimmer_layout"/>
        </com.facebook.shimmer.ShimmerFrameLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</FrameLayout>
